# picard-cuda

./: .gitignore  CMakeLists.txt  OPTIMIZATIONS.md  Snakefile  experiments.md  requirements-benchmark.txt
include/: algorithm.h  data_loader.h  fulfillment.h  neural_net.h  rng.h  simulation.h  types.h  utils.h
scripts/: plot_benchmark.py
src/: algorithm.cu  data_loader.cpp  main.cpp
tests/: convert_pickles_to_npy.py  export_problem.py  test_vs_jax.py
